Update to add sample pack store

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_activity_launch_pad">Mixmatic Loop Pad</string>
     <string name="unlicensed_message">This app is not properly licensed.  Go to Google Play Store to download a licensed version?</string>
     <string name="unlicensed_retry_message">Unable to verify license.  This is probably due to a network error.  Retry?</string>
+    <string name="create_first_sample_msg">Create first sample</string>
 
     <!-- Main loop pad activity menu -->
     <string name="action_settings">Settings</string>
