Added local and remote purchase records

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
 
     <!-- Store Strings -->
     <string name="buy">Buy</string>
+    <string name="download">Download</string>
     <string name="purchasing">Completing purchase</string>
     <string name="downloading">Downloading</string>
     <string name="decompressing">Decompressing</string>
