--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,9 @@
     <string name="error_out_of_memory">Out of memory</string>
     <string name="error_file_read">Unable to read file</string>
 
+    <!-- Counter View Strings-->
+    <string name="bpm_display">%d BPM</string>
+
     <!-- Sample Library Strings -->
     <string name="my_samples">My Samples</string>
     <string name="my_samples_underlined"><u>My Samples</u></string>
@@ -56,8 +59,8 @@
     <string name="buy">Buy</string>
     <string name="download">Download</string>
     <string name="purchasing">Completing purchase</string>
-    <string name="downloading">Downloading sample pack</string>
-    <string name="decompressing">Decompressing</string>
+    <string name="downloading">Downloading&#8230; %1$d %% </string>
+    <string name="decompressing">Decompressing&#8230;</string>
     <string name="downloaded">Downloaded</string>
     <string name="pack_install_complete">Sample pack installed</string>
     <string name="untitled">Untitled</string>
@@ -66,7 +69,7 @@
         This will keep track of your purchases across devices and allow you to re-download sample packs.
         Without an account, you will be responsible for saving or transferring any files that have been purchased and downloaded.</string>
     <string name="store_error_msg">Unable to contact Google Billing</string>
-    <string name="purchase_error">Error making purchase: + %s</string>
+    <string name="purchase_error">Error making purchase: + %1$s</string>
     <string name="unzip_error">Error decompressing. Try downloading again.</string>
     <string name="download_error">Error downloading file.  Please try again.</string>
     <string name="sign_in_success">Signed-in</string>
