--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="admob_id" translatable="false">ca-app-pub-4640479150069852~9455449521</string>
     <string name="launch_pad_activity_interstitial_ad_id" translatable="false">ca-app-pub-4640479150069852/9227646327</string>
     <string name="sample_edit_banner_ad_id" translatable="false">ca-app-pub-4640479150069852/3320713529</string>
+    <string name="store_activity_banner_ad_id" translatable="false">ca-app-pub-4640479150069852/5320465527</string>
     <string name="stop_ads_prompt">Would you like to stop seeing ads?</string>
 
     <!-- Facebook app id-->
@@ -20,6 +21,11 @@
     <string name="unlicensed_retry_message">Unable to verify license.  This is probably due to a network error.  Retry?</string>
     <string name="create_first_sample_msg">Create first sample</string>
 
+    <!-- Network connection strings -->
+    <string name="no_network">NETWORK UNAVAILABLE</string>
+    <string name="no_network_msg">An active internet connection is required to use the ad supported version of this app.  Enable your network connection and purchase the remove ads item to use the app offline.</string>
+    <string name="store_no_network_msg">An active internet connection is needed to access the store</string>
+
     <!-- Main loop pad activity menu -->
     <string name="action_settings">Settings</string>
     <string name="action_edit_mode">Configure touch pads</string>
@@ -29,6 +35,7 @@
     <string name="action_rewind">Rewind</string>
     <string name="action_save_mix">Export mix as wav</string>
     <string name="action_clear_pads">Clear all touch pads</string>
+    <string name="clear_pads_prompt">Are you sure you want to remove the samples from all touch pads?</string>
 
     <!-- Common strings dialog -->
     <string name="save">Save</string>
@@ -78,7 +85,7 @@
     <string name="unzip_error">Error decompressing. Try downloading again.</string>
     <string name="download_error">Error downloading file.  Please try again.</string>
     <string name="sign_in_success">Signed-in</string>
-    <string name="no_network">Unable to sign-in.  Check network connection.</string>
+    <string name="network_error">Unable to sign-in.  Check network connection.</string>
     <string name="auth_error">Authentication failed.  Please try again.</string>
     <string name="sign_out">Sign out</string>
     <string name="sign_out_success">Signed-out</string>
