--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,20 @@
     <string name="no_network_msg">An active internet connection is required to use the ad supported version of this app.  Enable your network connection and purchase the remove ads item to use the app offline.</string>
     <string name="store_no_network_msg">An active internet connection is needed to access the store</string>
 
+    <!-- Tip strings -->
+    <string name="welcome_message">Thanks for downloading Mixmatic Loop Pad\n\nStart playing around and tips will popup to help you find features</string>
+    <string name="stop_tips">Stop showing tips</string>
+    <string name="start_edit_mode_tip">Press the gear icon on the app bar to enter edit mode and add, remove, rearrange, and adjust the individual settings for each touch pad</string>
+    <string name="open_library_tip">You can also enter edit mode by opening the sample library drawer on the right</string>
+    <string name="edit_mode_tip_1">The settings for each touch pad can be customized to control how it looks and responds</string>
+    <string name="edit_mode_tip_2">The default settings for a new sample can be adjusted from the main app settings menu</string>
+    <string name="drag_tip">Long press to rearrange pads by dragging and dropping</string>
+    <string name="library_tip_1">The sample library is divided into two sections: My Samples and Sample Packs</string>
+    <string name="library_tip_2">More sample packs can be downloaded through the in-app store</string>
+    <string name="library_tip_3">Create your own samples from your music collection or the built-in microphone by pressing the + icon</string>
+    <string name="library_tip_4">Preview a sample by pressing the wave icon\n\nLong press a sample to drag it to a touchpad</string>
+
+
     <!-- Main loop pad activity menu -->
     <string name="action_settings">Settings</string>
     <string name="action_edit_mode">Configure touch pads</string>
@@ -36,8 +50,13 @@
     <string name="action_save_mix">Export mix as wav</string>
     <string name="action_clear_pads">Clear all touch pads</string>
     <string name="clear_pads_prompt">Are you sure you want to remove the samples from all touch pads?</string>
+    <string name="action_reset_demo">Restore demo pad setup</string>
+    <string name="reset_demo_prompt">Are you sure you want to restore all touch pads to their original state?</string>
 
-    <!-- Common strings dialog -->
+    <!-- Common strings -->
+    <string name="got_it">Got it</string>
+    <string name="next">Next</string>
+    <string name="thanks">Thanks</string>
     <string name="save">Save</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
@@ -192,6 +211,9 @@
     <string name="quant_quarter_summary">Quarter beat\nThe sample will start on the next quarter beat</string>
     <string name="quant_bar_summary">Bar\nThe sample will start on the first beat of the next bar as determined by the time signature</string>
     <string name="quant_gate_mode_summary">Samples are not quantized when launched in gate mode</string>
+    <string name="general_pref_title">General Preferences</string>
+    <string name="pref_show_tips">Show popup tips</string>
+    <string name="pref_show_tips_summary">Turn off then on to re-show tips that have already been seen</string>
 
     <!-- Strings for re-sample dialog -->
     <string name="sample_tempo_msg" formatted="false">Sample tempo: %.2f</string>
